crates/jarl-core/src/lints/base/system_file/snapshots/jarl_core__lints__base__system_file__tests__fix_output.snap
---
source: crates/jarl-core/src/lints/base/system_file/mod.rs
expression: "get_fixed_text(vec![\"system.file(file.path('path', 'to', 'data'), package = 'foo')\",],\n\"system_file\", None)"
---
OLD:
====
system.file(file.path('path', 'to', 'data'), package = 'foo')
NEW:
====
system.file('path', 'to', 'data', package = 'foo')
